--- a/templates/index.html
+++ b/templates/index.html
@@ -164,7 +164,7 @@
     </section>
 
     <!-- Services -->
-    <section id="services">
+    <section id="services" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
