--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -33,7 +33,7 @@ http {
 	upstream app_server {
 		server unix:/tmp/nginx.socket fail_timeout=0;
  	}
- 	
+
     proxy_cache_path   /tmp/ levels=1:2 keys_zone=s3_cache:10m max_size=500m
                        inactive=60m use_temp_path=off;
 
@@ -75,7 +75,7 @@ http {
             proxy_cache_bypass     $http_cache_purge;
             add_header             Cache-Control max-age=31536000;
             add_header             X-Cache-Status $upstream_cache_status;
-            proxy_pass             https://anton-testing.s3.eu-central-1.amazonaws.com/;
+            proxy_pass             http://anton-testing.s3.eu-central-1.amazonaws.com/;
         }
 	}
 }
