--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -34,7 +34,7 @@ http {
 		server unix:/tmp/nginx.socket fail_timeout=0;
  	}
 
-    proxy_cache_path   /tmp/ levels=1:2 keys_zone=s3_cache:10m max_size=500m
+    proxy_cache_path   /tmp/cache/ levels=1:2 keys_zone=s3_cache:10m max_size=500m
                        inactive=60m use_temp_path=off;
 
 	server {
