--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Best place to buy cats online">
+    <meta property="og:title" content="Geeky Cats Shop">
+    <meta property="og:description" content="Best place to buy cats online">
+    <meta property="og:image" content="/img/cats/cat1.jpg">
+
 
     <title>Geeky Cats Corporation</title>
 
