--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -12,10 +12,14 @@ http {
     gzip         on;
     gzip_vary    on;
     gzip_proxied any;
-    gzip_types   …;
-        #gzip on;
-        #gzip_comp_level 2;
-        #gzip_min_length 512;
+    gzip_types        text/plain
+                      text/javascript
+                      text/css
+                      text/xml
+                      application/json
+                      application/javascript
+                      application/x-font-ttf
+                      image/svg+xml
 
 	server_tokens off;
 
